--- a/index.html
+++ b/index.html
@@ -496,13 +496,13 @@
                                 return (
                                     <div key={client.id} onClick={() => { setSelectedClient(client); setView('clientDetail'); }} className="bg-white p-5 rounded-xl shadow-sm border border-gray-100 relative active:scale-[0.98] transition-transform cursor-pointer">
                                         <div className="flex justify-between items-start mb-2">
-                                            <div>
-                                                <h3 className="font-bold text-gray-800 text-lg">{client.ragioneSociale}</h3>
-                                                <span className={`inline-block mt-1 px-2 py-0.5 rounded text-[10px] font-bold border ${status.color}`}>
+                                            <h3 className="font-bold text-gray-800 text-lg">{client.ragioneSociale}</h3>
+                                            <div className="flex flex-col items-end gap-1 pl-2">
+                                                <span className={`inline-block px-2 py-0.5 rounded text-[10px] font-bold border whitespace-nowrap ${status.color}`}>
                                                     {status.label}
                                                 </span>
+                                                <ChevronRight size={18} className="text-gray-300" />
                                             </div>
-                                            <ChevronRight size={18} className="text-gray-300" />
                                         </div>
                                         <div className="text-sm text-gray-500 flex flex-col gap-1 mt-2">
                                             {client.telefono && <span className="flex items-center gap-2"><Phone size={12}/> {client.telefono}</span>}
